--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -11,15 +11,22 @@ on:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
-
+    name: Build on Java ${{ matrix.java_version }} and OS ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        java_version: ['8', '11']
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
     - uses: actions/checkout@v2
+    - name: Gradle Wrapper Validation
+      uses: gradle/wrapper-validation-action@v1
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: ${{ matrix.java_version }}
     - name: Build Transformer
-      run: cd dev/transformer && ./gradlew build
+      shell: bash
+      run: |
+        ./.github/scripts/build.sh
       
